--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -5,14 +5,13 @@
     width: 100%;
     height: 20px;
     z-index: 1;
+    color: #fff;
     background-color: rgb(5, 5, 7);
 }
 
 .nav-contents {
     display: flex;
     justify-content: space-between;
-    background-color: black;
-    color: white;
 }
 
 
@@ -25,6 +24,28 @@
     padding-left: 20px;
     color: white;
     cursor: pointer;
+}
+
+.navbar-list {
+flex: 3;
+display: flex;
+justify-content: center;
+margin: 0;
+padding: 0;
+list-style: none;
+}
+
+.navbar-item {
+margin-right: 15px;
+font-size: 18px;
+font-weight: 400;
+cursor: pointer;
+
+}
+
+.navbar-link {
+    color: #fff;
+    text-decoration: none;
 }
 
 .nav-avatar {
